--- a/app/views/budgetevents/new.html.erb
+++ b/app/views/budgetevents/new.html.erb
@@ -1,28 +1,30 @@
 <h1>Enter your Budget Event here:</h1>
-<%= form_for  @event do |f| %>
-      <div class="form-group">
-        <%= f.label :title, "Type of Earnings" %>
-        <%= f.text_field :title, class: 'form-control', placeholder: "Enter your yearly financial goal", step: :any %>
-      </div>
+<div class="event-box">
+  <%= form_for  @event do |f| %>
+        <div class="form-group">
+          <%= f.label :title, "Type of Earnings" %>
+          <%= f.text_field :title, class: 'form-control', placeholder: "Enter your yearly financial goal", step: :any %>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :value, "Enter amount" %>
-        <%= f.number_field :value, class: 'form-control', placeholder: "Enter your monthly financial goal" , step: :any %>
-      </div>
+        <div class="form-group">
+          <%= f.label :value, "Enter amount" %>
+          <%= f.number_field :value, class: 'form-control', placeholder: "Enter your monthly financial goal" , step: :any %>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :recurring, "Recurring amount" %>
-        <%= f.select :recurring, [['Yes',true],['No',false]] , {required: 'true', class: 'form-control'}%>
-      </div>
+        <div class="form-group">
+          <%= f.label :recurring, "Recurring amount" %>
+          <%= f.select :recurring, [['Yes',true],['No',false]] , {required: 'true', class: 'form-control'}%>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :recurringtime, "How often does this amount occur?" %>
-        <%= f.select :recurringtime, [['One Time',0],['Daily',1], ['Weekly',7], ['Biweekly',14],['Monthly',30]] , {required: 'true', class: 'form-control'}%>
-      </div>
+        <div class="form-group">
+          <%= f.label :recurringtime, "How often does this amount occur?" %>
+          <%= f.select :recurringtime, [['One Time',0],['Daily',1], ['Weekly',7], ['Biweekly',14],['Monthly',30],['Yearly',365]] , {required: 'true', class: 'form-control'}%>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :created_at, "Enter amount" %>
-        <%= f.text_field :created_at, class: 'form-control', id: "budgetevent", placeholder: "Enter your monthly financial goal" , step: :any %>
-      </div>
-      <%= f.submit "Submit", class: 'btn btn-success' %>
-<%end%>
+        <div class="form-group">
+          <%= f.label :created_at, "Enter Date" %>
+          <%= f.text_field :created_at, class: 'form-control', id: "budgetevent", placeholder: "dd-mm-yyyy" , step: :any %>
+        </div>
+        <%= f.submit "Submit", class: 'btn btn-success' %>
+  <%end%>
+</div>
