--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -7,16 +7,18 @@
 </ul>
 <h4>Shoot for the Stars with your Goal! You can always adjust it later.</h4>
 </br>
-<%= form_for  @goals do |f| %>
-      <div class="form-group">
-        <%= f.label :yearly, "Yearly Financial Goal" %>
-        <%= f.number_field :yearly, class: 'form-control', placeholder: "Enter your yearly financial goal", step: :any %>
-      </div>
+<div class="event-box">
+  <%= form_for  @goals do |f| %>
+        <div class="form-group">
+          <%= f.label :yearly, "Yearly Financial Goal" %>
+          <%= f.number_field :yearly, class: 'form-control', placeholder: "Enter your yearly financial goal", step: :any %>
+        </div>
 
-      <div class="form-group">
-        <%= f.label :created_at, "What day would you like to start?" %>
-        <%= f.text_field :created_at, class: 'form-control', id: "goal-start", placeholder: "Enter your start date", step: :any %>
-      </div>
+        <div class="form-group">
+          <%= f.label :created_at, "What day would you like to start?" %>
+          <%= f.text_field :created_at, class: 'form-control', id: "goal-start", placeholder: "Enter your start date", step: :any %>
+        </div>
 
-      <%= f.submit "Submit", class: 'btn btn-success' %>
-<%end%>
+        <%= f.submit "Submit", class: 'btn btn-success' %>
+  <%end%>
+</div>
