--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -23,7 +23,7 @@
 
         <div class="form-group">
           <%= f.label :created_at, "Enter the start date" %>
-          <%= f.text_field :created_at, class: 'form-control', placeholder: "dd-mm-yyyy", step: :any %>
+          <%= f.text_field :created_at, class: 'form-control', id: "budgetevent", placeholder: "dd-mm-yyyy", step: :any %>
         </div>
 
         <%= f.submit "Submit", class: 'btn btn-success' %>
