--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,6 +6,7 @@
       <%= link_to "Add Event", '/events/new', class: 'btn btn-success' %>
     </div>
   <% else %>
+    <%= Time.now.localtime %>
     <h1>Financial Goal Summary for <%= current_user.email %> </h1>
     <h4>Your Goal Completion Date is <%= completion_date(current_user)%> <%= link_to "Edit", edit_goal_path(current_user.goals[0].id), class: 'btn btn-success' %></h4>
     <div class="switch-button-div">
