--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,6 +7,7 @@
     </div>
   <% else %>
     <%= Time.now.localtime %>
+    <%= Time.now.in_time_zone("Pacific Time (US & Canada)") %>
     <h1>Financial Goal Summary for <%= current_user.email %> </h1>
     <h4>Your Goal Completion Date is <%= completion_date(current_user)%> <%= link_to "Edit", edit_goal_path(current_user.goals[0].id), class: 'btn btn-success' %></h4>
     <div class="switch-button-div">
