--- a/app/views/welcome/_landing.html.erb
+++ b/app/views/welcome/_landing.html.erb
@@ -1,6 +1,47 @@
 <body class="main-landing">
+  <div class="landing-header">
+    <h1>Welcome to Koin Charts!</h1>
+  </div>
   <div class="landing-box">
-    <h3>Welcome to Koin Charts!</h3>
-    <p>Our goal is to help you reach your financial goals! Sign Up Today!</p>
+    <iframe src="https://giphy.com/embed/l4EpfXAAq4KUoqUgg" width="480" height="300" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/l4EpfXAAq4KUoqUgg"></a></p>
+  </div>
+  <div class="landing-box">
+    <ul>
+      <li><h2>Free and Easy to Use!</h2></li>
+      <li><h2>Organize your Goals</h2></li>
+      <li><h2>Micro Manage</h2></li>
+      <li><h2>Understand your Spending</h2></li>
+      <li><h2>Plan for the future</h2></li>
+      <li><h2>Sign Up Today</h2></li>
+    </ul>
+  </div>
+  <div class="sign-up-box">
+    <div class="landing-header">
+      <%= link_to "Sign Up", new_user_registration_path, :class => "btn btn-success" %>
+      <%= link_to "Sign In", new_user_session_path, :class => "btn btn-info"  %>
+    </div>
+  </div>
+  <div class="second-landing">
+    <div class="landing-icons">
+      <div class="landing-header">
+        <span class="ion-pie-graph"></span>
+        <h2>Set your Goals</h2>
+        <h4>Set up your financial earnings goal and budget goal. Keep up with your pace and watch your goals become a reality.</h4>
+      </div>
+    </div>
+    <div class="landing-icons">
+      <div class="landing-header">
+        <span class="ion-arrow-graph-up-right"></span>
+        <h2>Maintain your pace</h2>
+        <h4>Micro Manage your goals and recieve a Daily, Weekly, Monthly, and Yearly pace. If you're falling behind, search the side gigs page to earn some side money!</h4>
+      </div>
+    </div>
+    <div class="landing-icons">
+      <div class="landing-header">
+        <span class="ion-cash"></span>
+        <h2>Save More than Ever</h2>
+        <h4>With a better understanding of where your money goes, you'll learn to be a master at budgeting! Watch the savings roll right in!</h4>
+      </div>
+    </div>
   </div>
 </body>
