--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,6 +11,8 @@
     <div class="switch-button-div">
       <%= link_to "Budget", budgets_path, class: 'btn btn-success' %>
       <%= link_to "Switch", welcome_category_path, class: 'btn btn-success' %>
+      <%= Time.now.localtime %></br>
+      <%= Time.now%>
     </div>
     <div class="main-dashboard">
       <div class="charts">
