--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,7 +12,7 @@
       <%= link_to "Budget", budgets_path, class: 'btn btn-success' %>
       <%= link_to "Switch", welcome_category_path, class: 'btn btn-success' %>
       <%= Time.now.localtime %></br>
-      <%= Time.now.current%>
+      <%= Time.current%>
     </div>
     <div class="main-dashboard">
       <div class="charts">
