--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,16 +39,16 @@
   </div>
   <% if user_signed_in? %>
     <div class="container-main">
-      <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <!-- Rob's ad 3 -->
-      <!-- <ins class="adsbygoogle"
+      <ins class="adsbygoogle"
        style="display:block"
        data-ad-client="ca-pub-1158355279235376"
        data-ad-slot="3768721838"
        data-ad-format="auto"></ins>
       <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
-      </script> -->
+      </script>
   <% else %>
     <div>
   <% end %>
@@ -66,16 +66,16 @@
       <%= yield %>
      </div>
      <% if user_signed_in? %>
-         <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
          <!-- Rob's ad 3 -->
-         <!-- <ins class="adsbygoogle"
+         <ins class="adsbygoogle"
           style="display:block"
           data-ad-client="ca-pub-1158355279235376"
           data-ad-slot="3768721838"
           data-ad-format="auto"></ins>
          <script>
          (adsbygoogle = window.adsbygoogle || []).push({});
-         </script> -->
+         </script>
       <% end %>
 </body>
 </html>
